log
Fri 19 Aug 2022 12:28:22 PM UTC: 
 tests:  0|6
total_score: 0/70
ded577b
Fri 19 Aug 2022 12:43:49 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size = 0;
      |       ^~
Compilation failed
73795e9
Fri 19 Aug 2022 12:49:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e7d7508
Fri 19 Aug 2022 12:49:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
afce58d
Fri 19 Aug 2022 01:07:57 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3d0723b
Fri 19 Aug 2022 01:09:25 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
899cc74
Fri 19 Aug 2022 01:16:49 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:72:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   72 |   if (list->current = list->tail){
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
6e217af
Fri 19 Aug 2022 01:17:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
2983a29
Sun 21 Aug 2022 07:05:19 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 20/70
23f5f54
Sun 21 Aug 2022 07:06:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
ab7a9dd
Sun 21 Aug 2022 07:13:47 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|3
total_score: 30/70
fc19486
Sun 21 Aug 2022 07:14:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 35/70
bb5899a
Sun 21 Aug 2022 07:23:42 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
153f95f
Sun 21 Aug 2022 07:37:04 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  11|1
total_score: 55/70
5223de9
Sun 21 Aug 2022 07:51:50 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
efe8e2b
Sun 21 Aug 2022 07:53:55 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
9263e96
Sun 21 Aug 2022 07:55:42 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
d671bf7
Sun 21 Aug 2022 08:01:09 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  12|0
total_score: 70/70
b66c1c6
